[package]
name = "gitignore"
version = "0.1.0"
authors = ["Kasper J. Hermansen <contact@kjuulh.io>"]
license = "MIT"
readme = "README.md"
keywords = ["git", "ignore", "clap", "interactive"]
repository = "https://github.com/kjuulh/gitignore"
documentation = "https://docs.rs/gitignore"
description = """
gitignore is a tool for easily adding patterns to gitignore and cleaning up afterwards
"""
categories = ["command-line-interface"]
edition = "2021"

[workspace]
members = [
  "crates/gitignore_inner"
]

[dependencies]
eyre = "0.6.8"
gitignore_inner = {path = "crates/gitignore_inner", version = "0.1.0"}
