[package]
name = "gitignore_inner"
version = "0.1.0"
edition = "2021"
authors = ["Kasper J. Hermansen <contact@kjuulh.io>"]
license = "MIT"
readme = "../../README.md"
keywords = ["git", "ignore", "clap", "interactive"]
repository = "https://github.com/kjuulh/gitignore"
documentation = "https://docs.rs/gitignore"
description = """
gitignore_inner is the internal module for cargo 
"""
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["env", "unicode", "string"] }
console = "0.15.8"
eyre = "0.6.11"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
