[package]
name = "kignore"
version.workspace = true
authors = ["Kasper J. Hermansen <contact@kjuulh.io>"]
license = "MIT"
readme = "../../README.md"
keywords = ["git", "ignore", "clap", "interactive"]
repository = "https://git.front.kjuulh.io/kjuulh/gitignore"
documentation = "https://docs.rs/kignore"
description = """
kignore is a tool for easily adding patterns to .gitignore and cleaning up afterwards
"""
categories = ["command-line-interface"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.4", features = ["env", "unicode", "string"] }
console = "0.15.8"
dirs = "5.0.1"
eyre = "0.6.12"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "local-time",
  "env-filter",
] }
